nex text margins and sms

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <div class="text-section">
             <div class="text">TEXT</div>
-            <div class="phone">415-211-2212</div>
+            <a href="sms:415-211-2212" class="phone">415-211-2212</a>
             <div class="opt">OPT</div>
             <div class="in">IN</div>
         </div>
