changed to text with hopefully email

--- a/index.html
+++ b/index.html
@@ -45,13 +45,11 @@
         <div class="email-section">
             <div class="email-text">EMAIL:</div>
             <div class="email-input-container">
-                <input type="email" 
-                       id="email-input" 
-                       class="email-input" 
-                       placeholder="" 
-                       autocomplete="email" 
-                       inputmode="email"
-                       name="email">
+                <textarea id="email-input" 
+                         class="email-input" 
+                         placeholder="" 
+                         autocomplete="email" 
+                         name="email"></textarea>
             </div>
             <div class="enter">ENTER</div>
         </div>
