just made it wide instead

--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
         <div class="email-section">
             <div class="email-text">EMAIL:</div>
             <div class="email-input-container">
-                <textarea id="email-input" 
-                         class="email-input" 
-                         placeholder="" 
-                         autocomplete="email" 
-                         name="email"></textarea>
+                <input type="email" 
+                       id="email-input" 
+                       class="email-input" 
+                       placeholder="" 
+                       autocomplete="email" 
+                       inputmode="email"
+                       name="email">
             </div>
             <div class="enter">ENTER</div>
         </div>
