--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
                 <a href="#contact">CONTACT</a>
                 <a href="#privacy">PRIVACY POLICY</a>
             </div>
-            <div class="copyright">© 2025</div>
+            <div class="copyright">
+                <img src="assets/NN-G_logo.svg" alt="NN-G Logo" class="nn-logo">
+                2025
+            </div>
         </footer>
     </div>
 </body>
