fixed pdf names

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <div class="releases-list">
                 <div class="release">
                     <div class="number">4.</div>
-                    <a href="StroboboatNNMar2025.pdf" class="release-link red">StroboboatNN<br>Mar2025.pdf</a>
+                    <a href="StroboboatNNMar2025.pdf" class="release-link red">Stroboboat-NN-G.pdf</a>
                 </div>
                 <div class="release">
                     <div class="number">3.</div>
-                    <a href="OutOfTheBoxNNFeb2025.pdf" class="release-link blue">OutOfTheBoxN<br>NFeb2025.pdf</a>
+                    <a href="OutOfTheBoxNNFeb2025.pdf" class="release-link blue">Out-Of-The-Box-NN-G.pdf</a>
                 </div>
                 <div class="release">
                     <div class="number">2.</div>
-                    <a href="AiBeaconNN2024.pdf" class="release-link yellow">AiBeaconNN20<br>24.pdf</a>
+                    <a href="AiBeaconNN2024.pdf" class="release-link yellow">Ai-Beacon-NN-G.pdf</a>
                 </div>
                 <div class="release">
                     <div class="number">1.</div>
-                    <a href="ThrowUrPhoneIntoTheLakeNN2023.pdf" class="release-link red">ThrowUrPhone<br>IntoTheLakeN<br>N2023.pdf</a>
+                    <a href="ThrowUrPhoneIntoTheLakeNN2023.pdf" class="release-link red">Throw-Ur-Phone-Into-The-Lake-NN-G.pdf</a>
                 </div>
             </div>
         </div>
