added about page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <div class="container">
         <header>
-            <div class="new">NEW</div>
-            <div class="nostalgia">NOSTALGIA<br>GROUP</div>
+            <a href="index.html" class="header-link">
+                <div class="new">NEW</div>
+                <div class="nostalgia">NOSTALGIA<br>GROUP</div>
+            </a>
         </header>
         
         <div class="text-section">
@@ -63,6 +65,7 @@
         
         <footer>
             <div class="footer-links">
+                <a href="about.html">ABOUT</a>
                 <a href="#contact">CONTACT</a>
                 <a href="#privacy">PRIVACY POLICY</a>
             </div>
