mobile updates round 2

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                        id="email-input" 
                        class="email-input" 
                        placeholder="" 
-                       autocomplete="email" 
+                       autocomplete="email-primary" 
                        inputmode="email"
-                       name="email">
+                       name="email-primary">
             </div>
             <div class="enter">SUBSCRIBE</div>
             
@@ -74,9 +74,9 @@
                        id="email-input-original" 
                        class="email-input" 
                        placeholder="" 
-                       autocomplete="email" 
+                       autocomplete="email-secondary" 
                        inputmode="email"
-                       name="email-original">
+                       name="email-secondary">
             </div>
             <div class="enter">SUBSCRIBE</div>
             
