final mobile edits

--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
             <div class="email-text">EMAIL:</div>
             <div class="email-input-container">
                 <input type="email" 
-                       id="email-input" 
+                       id="email-input-top" 
                        class="email-input" 
                        placeholder="" 
-                       autocomplete="email-primary" 
+                       autocomplete="off" 
                        inputmode="email"
-                       name="email-primary">
+                       name="email-top-section"
+                       style="background-color: #5DCB5D !important;">
             </div>
             <div class="enter">SUBSCRIBE</div>
             
             <div class="newsletter-form-container" style="display:none;">
                 <form class="newsletter-form" action="https://app.loops.so/api/newsletter-form/clx3ufqjp00cth2d6tk6rmx8c" method="POST">
-                    <input type="email" class="newsletter-form-input" name="email">
+                    <input type="email" class="newsletter-form-input" name="email-hidden-top" autocomplete="off">
                     <button type="submit" class="newsletter-form-button">Subscribe</button>
                     <button type="button" class="newsletter-loading-button" style="display:none;">Loading...</button>
                 </form>
@@ -71,18 +72,19 @@
             <div class="email-text">EMAIL:</div>
             <div class="email-input-container">
                 <input type="email" 
-                       id="email-input-original" 
+                       id="email-input-bottom" 
                        class="email-input" 
                        placeholder="" 
-                       autocomplete="email-secondary" 
+                       autocomplete="off" 
                        inputmode="email"
-                       name="email-secondary">
+                       name="email-bottom-section"
+                       style="background-color: #5DCB5D !important;">
             </div>
             <div class="enter">SUBSCRIBE</div>
             
             <div class="newsletter-form-container" style="display:none;">
                 <form class="newsletter-form" action="https://app.loops.so/api/newsletter-form/clx3ufqjp00cth2d6tk6rmx8c" method="POST">
-                    <input type="email" class="newsletter-form-input" name="email">
+                    <input type="email" class="newsletter-form-input" name="email-hidden-bottom" autocomplete="off">
                     <button type="submit" class="newsletter-form-button">Subscribe</button>
                     <button type="button" class="newsletter-loading-button" style="display:none;">Loading...</button>
                 </form>
