--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <a href="index.html" class="header-link">
                 <div class="new">NEW</div>
-                <div class="nostalgia">NOSTALGIA<br>GROUP</div>
+                <div class="nostalgia">NOSTALGIA<br><img src="assets/NN-G_logo.svg" alt="NN-G Logo" class="header-logo"></div>
             </a>
         </header>
         
@@ -55,9 +55,9 @@
                 <div class="upcoming-event">
                     <div class="event-content">
                         <span class="event-date">SUN MAR 30</span><br>
-                        <span class="event-title">NEW NOSTALGIA PRESENTS: <span class="foggydome blue">FOGGYDOME</span></span><br>
+                        <span class="event-title">NEW NOSTALGIA PRESENTS: <span class="holodome blue">HOLODOME</span></span><br>
                         <!-- Calendly link widget begin -->
-                        <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jorponciano/foggy-dome?primary_color=4285F4'});return false;" class="event-action blue">BOOK A SPOT</a>
+                        <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jorponciano/holodome?primary_color=4285F4'});return false;" class="event-action blue">BOOK A SPOT</a>
                         <!-- Calendly link widget end --><br>
                         <span class="event-details">(Limited 40)<br>
                         [$0.00]</span>
