styling changes + favicon

--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>New Nostalgia Group</title>
+    <title>New Nostalgia</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="NN" />
+    <link rel="manifest" href="/site.webmanifest" />
 </head>
 <body>
     <div class="container">
         <header>
             <a href="index.html" class="header-link">
                 <div class="new">NEW</div>
-                <div class="nostalgia">NOSTALGIA<br><img src="assets/NN-G_logo.svg" alt="NN-G Logo" class="header-logo"></div>
+                <div class="nostalgia">NOSTALGIA<br><img src="assets/NN_logo_green.svg" alt="NN-G Logo" class="header-logo"></div>
             </a>
         </header>
         
@@ -57,10 +63,10 @@
                         <span class="event-date">SUN MAR 30</span><br>
                         <span class="event-title">NEW NOSTALGIA PRESENTS: <span class="holodome blue">HOLODOME</span></span><br>
                         <!-- Calendly link widget begin -->
-                        <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jorponciano/holodome?primary_color=4285F4'});return false;" class="event-action blue">BOOK A SPOT</a>
+                        <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jorponciano/holo-dome?primary_color=4285F4'});return false;" class="event-action blue">BOOK A SPOT</a>
                         <!-- Calendly link widget end --><br>
-                        <span class="event-details">(Limited 40)<br>
-                        [$0.00]</span>
+                        <span class="event-details"><span class="limited-text">(Limited 40)</span><br>
+                        <span class="price-text">[$0.00]</span></span>
                     </div>
                 </div>
             </div>
@@ -107,7 +113,7 @@
                 <a href="#privacy">PRIVACY POLICY</a>
             </div>
             <div class="copyright">
-                <img src="assets/NN-G_logo.svg" alt="NN-G Logo" class="nn-logo">
+                <img src="assets/NN_logo_black.svg" alt="NN-G Logo" class="nn-logo">
                 2025
             </div>
         </footer>
