--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="NN" />
-    <link rel="manifest" href="/site.webmanifest" />
 </head>
 <body>
     <div class="container">
@@ -66,7 +60,7 @@
                         <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jorponciano/holo-dome?primary_color=4285F4'});return false;" class="event-action blue">BOOK A SPOT</a>
                         <!-- Calendly link widget end --><br>
                         <span class="event-details"><span class="limited-text">(Limited 40)</span><br>
-                        <span class="price-text">[$0.00]</span></span>
+                        [$0.00]</span>
                     </div>
                 </div>
             </div>
