finished styling baseline

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jorponciano/holo-dome?primary_color=4285F4'});return false;" class="event-action blue">BOOK A SPOT</a>
                         <!-- Calendly link widget end --><br>
                         <span class="event-details"><span class="limited-text">(Limited 40)</span><br>
-                        [$0.00]</span>
+                        <span class="price-text">[$0.00]</span></span>
                     </div>
                 </div>
             </div>
