--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <header>
             <a href="index.html" class="header-link">
                 <div class="new">NEW</div>
-                <div class="nostalgia">NOSTALGIA<br>GROUP</div>
+                <div class="nostalgia">NOSTALGIA<br><img src="assets/NN_logo_green.svg" alt="NN-G Logo" class="header-logo"></div>
             </a>
         </header>
         
