made animation pause on scroll

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <span class="event-date">SUN MAR 30</span><br>
                         <span class="event-title">NEW NOSTALGIA PRESENTS: <span class="holodome blue">HOLODOME</span></span><br>
                         <!-- Calendly link widget begin -->
-                        <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jorponciano/holo-dome?primary_color=4285F4'});return false;" class="event-action blue">BOOK A SPOT</a>
+                        <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jorponciano/holo-dome?primary_color=4285F4'});return false;" class="event-action blue">BOOK NOW</a>
                         <!-- Calendly link widget end --><br>
                         <span class="event-details"><span class="limited-text">(Limited 40)</span><br>
                         <span class="price-text">[$0.00]</span></span>
