added privacy policy

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         <footer>
             <div class="footer-links">
                 <a href="about.html">ABOUT</a>
-                <a href="#contact">CONTACT</a>
-                <a href="#privacy">PRIVACY POLICY</a>
+                <a href="mailto:wwwnewnostalgia@gmail.com">CONTACT</a>
+                <a href="privacy.html">PRIVACY POLICY</a>
             </div>
             <div class="copyright">
                 <img src="assets/NN_logo_black.svg" alt="NN-G Logo" class="nn-logo">
