--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
         <footer>
             <div class="footer-links">
                 <a href="index.html">HOME</a>
-                <a href="#contact">CONTACT</a>
-                <a href="#privacy">PRIVACY POLICY</a>
+                <a href="mailto:wwwnewnostalgia@gmail.com">CONTACT</a>
+                <a href="privacy.html">PRIVACY POLICY</a>
             </div>
             <div class="copyright">
                 <img src="assets/NN-G_logo.svg" alt="NN-G Logo" class="nn-logo">
