updated upcoming and past sections

--- a/index.html
+++ b/index.html
@@ -54,10 +54,14 @@
             <div class="upcoming-list">
                 <div class="upcoming-event">
                     <div class="event-content">
-                        <span class="event-date">SAT APR 5<br>8PM</span><br>
-                        <span class="event-title">NEW NOSTALGIA PRESENTS: <span class="holodome blue">HOLODOME 2</span></span><br>
-                        <span class="hayes-text">(HAYES VALLEY POP-UP HAPPENING)</span><br>
-                        <a href="#" onclick="scrollToEmail(); return false;" class="event-action price-text" style="text-decoration: underline;">SUBSCRIBE FOR DETAILS</a>
+                        <span class="event-date">CASE STUDIES<br>(ONLINE RELEASES)</span><br>
+                        3.
+                        <br><span class="text-3 color-gray">HoloDome</span><br>
+                        2.
+                        <br><span class="text-2 color-gray">AiBeacon</span><br>
+                        1.
+                        <br><span class="text-1 color-gray">ThrowUrPhone</span><br>
+                        <a href="#" onclick="scrollToEmail(); return false;" class="event-action color-blue" style="text-decoration: underline;">SUBSCRIBE FOR DETAILS</a>
                     </div>
                 </div>
             </div>
@@ -65,10 +69,14 @@
             <!-- Add the new PAST section -->
             <div class="upcoming-header">PAST</div>
             <div class="upcoming-list">
-                <div class="upcoming-event past-event">
+                <div class="upcoming-event">
                     <div class="event-content">
-                        <span class="event-date">SUN MAR 30</span><br>
-                        <span class="event-title">NEW NOSTALGIA PRESENTS: <span class="holodome blue">HOLODOME</span></span>
+                        <span class="event-date color-gray">SAT APR 5 2025</span><br>
+                        <span class="event-title color-gray">NEW NOSTALGIA PRESENTS: <span class="event-text color-gray">HOLODOME 2</span></span>
+                        <br>
+                        <br>
+                        <span class="event-date color-gray">SUN MAR 30 2025</span><br>
+                        <span class="event-title color-gray">NEW NOSTALGIA PRESENTS: <span class="event-text color-gray">HOLODOME</span></span>
                     </div>
                 </div>
             </div>
