fixed list styling

--- a/index.html
+++ b/index.html
@@ -54,14 +54,15 @@
             <div class="upcoming-list">
                 <div class="upcoming-event">
                     <div class="event-content">
-                        <span class="event-date">CASE STUDIES<br>(ONLINE RELEASES)</span><br>
+                        <span class="event-date">RELEASES</span><br>
                         3.
-                        <br><span class="text-3 color-gray">HoloDome</span><br>
+                        <br><span class="text-3 color-gray">HoloDome.pdf</span><br>
                         2.
-                        <br><span class="text-2 color-gray">AiBeacon</span><br>
+                        <br><span class="text-2 color-gray">AiBeacon.pdf</span><br>
                         1.
-                        <br><span class="text-1 color-gray">ThrowUrPhone</span><br>
-                        <a href="#" onclick="scrollToEmail(); return false;" class="event-action color-blue" style="text-decoration: underline;">SUBSCRIBE FOR DETAILS</a>
+                        <br><span class="text-1 color-gray">ThrowUrPhone.pdf</span><br>
+                        (COMING SOON)
+                        <a href="#" onclick="scrollToEmail(); return false;" class="event-action color-green" style="text-decoration: underline;">SUBSCRIBE FOR RELEASES</a>
                     </div>
                 </div>
             </div>
@@ -70,12 +71,14 @@
             <div class="upcoming-header">PAST</div>
             <div class="upcoming-list">
                 <div class="upcoming-event">
-                    <div class="event-content">
-                        <span class="event-date color-gray">SAT APR 5 2025</span><br>
+                    <div class="event-content color-gray">
+                       
+                        <span class="event-date color-gray">SAT APR 5 '25</span><br>
                         <span class="event-title color-gray">NEW NOSTALGIA PRESENTS: <span class="event-text color-gray">HOLODOME 2</span></span>
                         <br>
+                        
                         <br>
-                        <span class="event-date color-gray">SUN MAR 30 2025</span><br>
+                        <span class="event-date color-gray">SUN MAR 30 '25</span><br>
                         <span class="event-title color-gray">NEW NOSTALGIA PRESENTS: <span class="event-text color-gray">HOLODOME</span></span>
                     </div>
                 </div>
