--- a/index.html
+++ b/index.html
@@ -55,11 +55,9 @@
                 <div class="upcoming-event">
                     <div class="event-content">
                         2.
-                        <br><span class="text-2 color-blue">NN-HoloDome.pdf</span><br>
+                        <br><a href="assets/NN-HoloDome.pdf" class="text-2 color-blue" target="_blank">NN-HoloDome.pdf</a><br>
                         1.
-                        <br><span class="text-1 color-red">NN-AiBeacon.pdf</span><br>
-                        
-                        
+                        <br><a href="assets/NN-AiBeacon.pdf" class="text-1 color-red" target="_blank">NN-AiBeacon.pdf</a><br>
                     </div>
                 </div>
             </div>
