--- a/index.html
+++ b/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>New Nostalgia</title>
+    
+    <!-- SEO Meta -->
+    <title>New Nostalgia | Immersive Art & Music Collective in San Francisco</title>
+    <meta name="description" content="New Nostalgia is a San Francisco-based art collective producing immersive events and sensory installations through light, music, and culture. Subscribe for upcoming releases.">
+    <link rel="canonical" href="https://www.newnostalgia.io/">
+  
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.newnostalgia.io/">
+    <meta property="og:title" content="New Nostalgia | Immersive Art & Music Collective">
+    <meta property="og:description" content="Immersive light shows, sound experiences, and pop-ups from New Nostalgia, a San Francisco-based collective.">
+    <meta property="og:image" content="https://www.newnostalgia.io/assets/NN_logo_green.svg">
+  
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="New Nostalgia | Immersive Art & Music Collective">
+    <meta name="twitter:description" content="Immersive light shows, sound experiences, and pop-ups from New Nostalgia, a San Francisco-based collective.">
+    <meta name="twitter:image" content="https://www.newnostalgia.io/assets/NN_logo_green.svg">
+  
+    <!-- Schema -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "New Nostalgia",
+        "url": "https://www.newnostalgia.io",
+        "logo": "https://www.newnostalgia.io/assets/NN_logo_green.svg",
+        "description": "New Nostalgia is a San Francisco-based collective creating immersive art and music experiences.",
+        "sameAs": ["https://www.instagram.com/newnostalgia.io"]
+      }
+    </script>
+  
     <link rel="stylesheet" href="styles.css">
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-</head>
+  </head>
 <body>
+  <h1 style="display:none;">New Nostalgia – Immersive Art & Music Collective in San Francisco</h1>
     <div class="container">
         <header>
             <a href="index.html" class="header-link">
@@ -91,6 +123,10 @@
                 </div>
             </div>
         </div>
+
+        <p class="visually-hidden">
+          New Nostalgia is an immersive art and music collective based in San Francisco, creating sensory events that fuse light, architecture, and experimental sound.
+        </p>
         
         <footer>
             <div class="footer-links">
