--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
     <!-- SEO Meta -->
-    <title>New Nostalgia | Immersive Art & Music Collective in San Francisco</title>
-    <meta name="description" content="New Nostalgia is a San Francisco-based art collective producing immersive events and sensory installations through light, music, and culture. Subscribe for upcoming releases.">
+    <title>New Nostalgia | Stage Design, Art Installation, and DJ Group</title>
+    <meta name="description" content="New Nostalgia is a San Francisco-based group focused on stage design, art installation, and DJing. Subscribe for upcoming releases.">
     <link rel="canonical" href="https://www.newnostalgia.io/">
   
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.newnostalgia.io/">
-    <meta property="og:title" content="New Nostalgia | Immersive Art & Music Collective">
-    <meta property="og:description" content="Immersive light shows, sound experiences, and pop-ups from New Nostalgia, a San Francisco-based collective.">
+    <meta property="og:title" content="New Nostalgia | Stage Design, Art Installation, and DJ Group">
+    <meta property="og:description" content="New Nostalgia is a San Francisco-based group focused on stage design, art installation, and DJing.">
     <meta property="og:image" content="https://www.newnostalgia.io/assets/NN_logo_green.svg">
   
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="New Nostalgia | Immersive Art & Music Collective">
-    <meta name="twitter:description" content="Immersive light shows, sound experiences, and pop-ups from New Nostalgia, a San Francisco-based collective.">
+    <meta name="twitter:title" content="New Nostalgia | Stage Design, Art Installation, and DJ Group">
+    <meta name="twitter:description" content="New Nostalgia is a San Francisco-based group focused on stage design, art installation, and DJing.">
     <meta name="twitter:image" content="https://www.newnostalgia.io/assets/NN_logo_green.svg">
   
     <!-- Schema -->
@@ -30,7 +30,7 @@
         "name": "New Nostalgia",
         "url": "https://www.newnostalgia.io",
         "logo": "https://www.newnostalgia.io/assets/NN_logo_green.svg",
-        "description": "New Nostalgia is a San Francisco-based collective creating immersive art and music experiences.",
+        "description": "New Nostalgia is a San Francisco-based group focused on stage design, art installation, and DJing.",
         "sameAs": ["https://www.instagram.com/newnostalgia.io"]
       }
     </script>
@@ -40,7 +40,7 @@
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
   </head>
 <body>
-  <h1 style="display:none;">New Nostalgia – Immersive Art & Music Collective in San Francisco</h1>
+  <h1 style="display:none;">New Nostalgia – Stage Design, Art Installation, and DJ Group in San Francisco</h1>
     <div class="container">
         <header>
             <a href="index.html" class="header-link">
@@ -125,7 +125,7 @@
         </div>
 
         <p class="visually-hidden">
-          New Nostalgia is an immersive art and music collective based in San Francisco, creating sensory events that fuse light, architecture, and experimental sound.
+          New Nostalgia is a San Francisco-based group focused on stage design, art installation, and DJing.
         </p>
         
         <footer>
