--- a/privacy.html
+++ b/privacy.html
@@ -85,7 +85,7 @@
             <h1>Privacy Policy</h1>
             <p><strong>Effective Date:</strong> March 23, 2025</p>
 
-            <p>Welcome to <a href="https://newnostalgia.io">www.newnostalgia.io</a> ("we," "us," or "our"). Your privacy is important to us. This Privacy Policy explains how we collect, use, and safeguard your personal information.</p>
+            <p>Welcome to <a href="https://newnostalgia.org">www.newnostalgia.org</a> ("we," "us," or "our"). Your privacy is important to us. This Privacy Policy explains how we collect, use, and safeguard your personal information.</p>
 
 
             <h2>1. Information We Collect</h2>
@@ -145,7 +145,7 @@
             <p>If you have any questions about this Privacy Policy or your personal information, please contact us at:</p>
 
             <p><strong>wwwnewnostalgia@gmail.com</strong><br>
-             <a href="https://newnostalgia.io">www.newnostalgia.io</a></p>
+             <a href="https://newnostalgia.org">www.newnostalgia.org</a></p>
         </div>
         
         <footer>
