--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="opt">OPT</div>
         <div class="in">IN</div>
         
-        <div class="new-upcoming-section">
+        <!-- <div class="new-upcoming-section">
             <div class="new-upcoming-header">UPCOMING</div>
             <div class="new-upcoming-list">
                 <div class="new-upcoming-event">
@@ -109,17 +109,19 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         
         <div class="placeholder-section">
             <div class="upcoming-header">RELEASES</div>
             <div class="upcoming-list">
                 <div class="upcoming-event">
                     <div class="event-content">
+                        3.
+                        <br><a href="assets/NN-Vitarave.pdf" class="text-3 color-blue" target="_blank">NN-Vitarave.pdf</a><br>
                         2.
-                        <br><a href="assets/NN-HoloDome.pdf" class="text-2 color-blue" target="_blank">NN-HoloDome.pdf</a><br>
+                        <br><a href="assets/NN-HoloDome.pdf" class="text-2 color-red" target="_blank">NN-HoloDome.pdf</a><br>
                         1.
-                        <br><a href="assets/NN-AiBeacon.pdf" class="text-1 color-red" target="_blank">NN-AiBeacon.pdf</a><br>
+                        <br><a href="assets/NN-AiBeacon.pdf" class="text-1 color-yellow" target="_blank">NN-AiBeacon.pdf</a><br>
                     </div>
                 </div>
             </div>
