--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <footer>
             <div class="footer-links">
                 <a href="about.html">ABOUT</a>
-                <a href="mailto:wwwnewnostalgia@gmail.com">CONTACT</a>
+                <a href="mailto:wwwnewnostalgia@gmail.com">INQUIRY</a>
                 <a href="privacy.html">PRIVACY POLICY</a>
             </div>
             <div class="copyright">
