--- a/staging.html
+++ b/staging.html
@@ -7,20 +7,20 @@
     <!-- SEO Meta -->
     <title>New Nostalgia | Stage Design, Art Installation, and DJ Group</title>
     <meta name="description" content="New Nostalgia is a San Francisco-based group focused on stage design, art installation, and DJing. Subscribe for upcoming releases.">
-    <link rel="canonical" href="https://www.newnostalgia.io/">
+    <link rel="canonical" href="https://www.newnostalgia.org/">
   
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.newnostalgia.io/">
+    <meta property="og:url" content="https://www.newnostalgia.org/">
     <meta property="og:title" content="New Nostalgia | Stage Design, Art Installation, and DJ Group">
     <meta property="og:description" content="New Nostalgia is a San Francisco-based group focused on stage design, art installation, and DJing.">
-    <meta property="og:image" content="https://www.newnostalgia.io/assets/NN_logo_green.svg">
+    <meta property="og:image" content="https://www.newnostalgia.org/assets/NN_logo_green.svg">
   
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="New Nostalgia | Stage Design, Art Installation, and DJ Group">
     <meta name="twitter:description" content="New Nostalgia is a San Francisco-based group focused on stage design, art installation, and DJing.">
-    <meta name="twitter:image" content="https://www.newnostalgia.io/assets/NN_logo_green.svg">
+    <meta name="twitter:image" content="https://www.newnostalgia.org/assets/NN_logo_green.svg">
   
     <!-- Schema -->
     <script type="application/ld+json">
@@ -28,10 +28,10 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "New Nostalgia",
-        "url": "https://www.newnostalgia.io",
-        "logo": "https://www.newnostalgia.io/assets/NN_logo_green.svg",
+        "url": "https://www.newnostalgia.org",
+        "logo": "https://www.newnostalgia.org/assets/NN_logo_green.svg",
         "description": "New Nostalgia is a San Francisco-based group focused on stage design, art installation, and DJing.",
-        "sameAs": ["https://www.instagram.com/newnostalgia.io"]
+        "sameAs": ["https://www.instagram.com/newnostalgia.org"]
       }
     </script>
   
